--- a/src/App.css
+++ b/src/App.css
@@ -275,3 +275,41 @@ a:active {
   color: white;
   text-decoration: none;
 }
+
+.contactContainer {
+  margin: 0 10px;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.contactPanel {
+  /* background-color: #ECECEC; */
+  border-radius: 10px;
+  /* min-height: 10px;
+  margin: 5px; */
+  /* margin: 15px 5px; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 100%;
+}
+
+.imageHeader {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.contactDetails {
+  display: flex;
+  align-items: center;
+  color: #161616;
+  margin: 0px 0px 40px 0px;
+}
+
+.material-symbols-outlined {
+  margin: 0px 10px 0px 30px;
+}
