--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  overflow: hidden;
+}
+
+.socialIcons {
+  position: absolute;
+  float: right;
 }
 
 .App-logo {
@@ -25,21 +31,6 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.app-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: white;
-  height: 70px;
-  padding: 16px;
-}
-
-.header-image img {
-  max-width: 100%;
-  max-height: 250px;
-  padding-bottom: 35px;
 }
 
 .header-text {
