--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
+  display: flex;
+  overflow-x: hidden;
   margin: 0;
+  background-color: #171717;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
